tests/compile_fail/bool_vs_int.stderr
error[E0277]: the trait bound `drizzle::core::types::Bool: Compatible<Int>` is not satisfied
  --> tests/compile_fail/bool_vs_int.rs:17:16
   |
17 |     let _ = eq(config.enabled, 42);
   |             -- ^^^^^^^^^^^^^^ the trait `Compatible<Int>` is not implemented for `drizzle::core::types::Bool`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `Compatible<Int>` is not implemented for `drizzle::core::types::Bool`
           but trait `Compatible<drizzle::core::types::Any>` is implemented for it
   = help: for that trait implementation, expected `drizzle::core::types::Any`, found `Int`
note: required by a bound in `drizzle::core::expressions::eq`
  --> core/src/expr/cmp.rs
   |
   | pub fn eq<'a, V, L, R>(left: L, right: R) -> SQLExpr<'a, V, Bool, NonNull, Scalar>
   |        -- required by a bound in this function
...
   |     L::SQLType: Compatible<R::SQLType>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `eq`
